<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application</string>
    <string name="my_api_key">AIzaSyCplmhVhyG4PbcgA2Fb63kP4KRVX1TENXw</string>
    <string name="restaurantName">藏壽司 漢神巨蛋店你好你好你好你好嗎你好你好你好你好你好你好你好你好</string>
    <string name="restaurant_address">高雄市左營區博愛二路777號7樓高雄市左營區博愛二路777號7樓</string>
    <string name="jump_map">跳地圖</string>
    <string name="jump_phone">跳撥打電話</string>
    <string name="like">收藏</string>
    <string name="unlike">黑名單</string>
    <string name="check_in">打卡</string>
    <string name="go_back">跳回上一頁</string>
    <string name="jump_category1">跳去分類結果</string>
    <string name="jump_category2">跳去分類結果</string>
    <string name="jump_category3">跳去分類結果</string>
    <string name="jump_information">跳去店家資訊</string>
    <string name="jump_menu">跳去店家菜單</string>
    <string name="phone_number">0976185107</string>
    <string name="jump_note">跳小筆記</string>
    <string name="monday">週一\u0020\u0020載入資料中\n</string>
    <string name="Tuesday">週二\u0020\u0020載入資料中\n</string>
    <string name="Wednesday">週三\u0020\u0020載入資料中\n</string>
    <string name="Thursday">週四\u0020\u0020載入資料中\n</string>
    <string name="Friday">週五\u0020\u0020載入資料中\n</string>
    <string name="Saturday">週六\u0020\u0020載入資料中\n</string>
    <string name="Sunday">週日\u0020\u0020載入資料中\n</string>
    <string name="other_title">額外環保作為</string>
    <string name="nothing_text">載入筆記中</string>
    <string name="like_score">100k</string>
    <string name="unlike_score">100k\n</string>
    <string name="res_category1">載入中</string>
    <string name="button_res_information">店家資訊</string>
    <string name="button_menu">菜單</string>
    <string name="more">查看更多</string>
    <string name="name_shop">藏壽司 漢神巨蛋店</string>
    <string name="info_time_tittle">今日營業時間</string>
    <string name="open_time">載入中</string>
    <string name="distance_name">計算中</string>
    <string name="love_word" >858</string>
    <string name="unlove_word">116</string>
    <string name="checkmore_word">查看更多\n</string>
    <string name="dialog_text1">初来乍到 !</string>
    <string name="dialog_text3">恭喜獲得</string>
    <string name="dialog_button_water">前往澆水</string>
    <string name="dialog_button_map">返回地圖</string>
    <string name="dialog_text4">x20</string>
    <string name="dialog_text5">x10</string>
    <string name="dialog_text2">故地重遊 !</string>
    <string name="dialog_text6">環保餐廳打卡失敗！</string>
    <string name="dialog_text7">三小時内不可重複打卡</string>
    <string name="dialog_text8">下次打卡時間為</string>
    <string name="dialog_text9"></string>
    <string name="dialog_text10">請三小時後再打卡</string>
    <string name="dialog_text11">距離太遠無法打卡</string>
    <string name="dialog_text12">請移到距離餐廳位置</string>
    <string name="dialog_text13">20公尺</string>
    <string name="dialog_text14">再進行打卡</string>
    <string name="watertext">你好，这里可以浇水</string>
    <string name="close_restaurant">餐廳未營業</string>
    <string name="next_opentime_text">下次營業時間</string>
    <string name="dialog_hint">寫點東西吧</string>
    <string name="word_title">輸入字數</string>
    <string name="input_wordnumber">000</string>
    <string name="input_wordmaxnumber">/100</string>
    <string name="comfirm_word">確認</string>
    <string name="cancle_word">取消</string>
    <string name="delete_input_title">確認刪除此則筆記</string>
    <string name="bookmark">收藏</string>
    <string name="blacklist">黑名單</string>
    <string name="spinner1_title">請選擇縣市</string>
    <string name="spinner2_title">請選擇區域</string>
    <string-array name="spinner_item">
        <item>請選擇縣市</item>
    </string-array>
    <string-array name="spinner_item2">
        <item>請選擇區域</item>
    </string-array>
    <string-array name="spinner_note">
        <item>請選擇分類</item>
    </string-array>
    <string name="user_name_title">User 00213</string>
    <string name="tree_total_number">3</string>
    <string name="profile_default_title1">哎呀！這裡什麼都沒有呢！</string>
    <string name="profile_default_title2">快去打卡專屬你的店家打卡紀錄吧！</string>
    <string name="profile_default_title3">快去新增專屬你的店家小筆記吧！</string>
    <string name="button_title1">打卡店家</string>
    <string name="button_title2">小筆記</string>
    <string name="dialog_date">2024.02.23</string>
    <string name="button_title3">儲存</string>
    <string name="button_title4">取消</string>
    <string name="button_title5">確認</string>
    <string name="change_profile_picture">更換頭像</string>
    <string name="change_profile_name">編輯個人名稱</string>
    <string name="delete_note_title">確認刪除此則留言</string>
    <string name="reword_title_word">獲得額外獎勵!\n</string>
    <string name="water_title">50滴水滴!\n</string>
    <string name="receive_word">領取</string>
    <string name="complete_planting_word">完成種植</string>
    <string name="complete_tree_word1">我們將爲你捐贈100元給</string>
    <string name="complete_tree_word2">種樹夢想家 宋文生先生</string>
    <string name="complete_tree_word3">為地球儘一份心力!</string>
    <string name="Donateanonymously_word">匿名捐贈</string>
    <string name="Donaterealname_word">實名捐贈</string>
    <string name="donatename_title">捐贈名稱</string>
    <string name="inputword_title">輸入字數</string>
    <string name="accumulate_input_word">13\n</string>
    <string name="total_input_word">/20\n</string>
    <string name="cancel_word">取消</string>
    <string name="register_tree_title">已為您登記一個捐贈名稱</string>
    <string name="comtinue_water_word">繼續澆水</string>
    <string name="goback_map_word">返回地圖</string>
    <string name="close_checkinday">關掉每日簽到</string>
    <string name="sum_water">1000</string>
    <string name="check_task">查看任務</string>
    <string name="watering">澆水</string>
    <string name="check_donatelist">查看捐贈名單</string>
    <string name="see_story">看故事</string>
    <string name="button_text">6 💧 X5</string>
    <string name="newres_checkin_word">新餐廳打卡</string>
    <string name="X20_word">X 20</string>
    <string name="go_to_word">前往</string>
    <string name="oldres_checkin_word">舊餐廳打卡</string>
    <string name="X10_word">X 10</string>
    <string name="checkin_day1">打卡day1</string>
    <string name="checkin_day2">打卡day2</string>
    <string name="checkin_day3">打卡day3</string>
    <string name="checkin_day4">打卡day4</string>
    <string name="checkin_day5">打卡day5</string>
    <string name="checkin_day6">打卡day6</string>
    <string name="checkin_day7">打卡day7</string>
    <string name="check_appreciatelist">查看捐贈名單</string>
    <string name="progress_overTitle">收成！</string>
    <string name="appreciate_title1">我們將捐出</string>
    <string name="appreciate_title2">給宋文生先生</string>
    <string name="appreciate_title3">特此感謝</string>
    <string name="appreciate_title4">您與其他使用者共襄盛舉</string>
    <string name="appreciate_title5">一起為地球盡一份心力吧 !</string>
    <string name="appreciate_pricetitle">NT$</string>
    <string name="appreciate_totalprice">2,100</string>
    <string name="close_appreciate_dialog">關掉感謝狀</string>
    <string name="input_name_error_title1">你還沒輸入捐贈名稱喔！</string>
    <string name="input_name_error_title2">點擊返回</string>
    <string name="input_name_error_title3">繼續輸入捐贈名稱</string>
    <string name="input_name_error_title4">名稱只能輸入中英數字喔!</string>
    <string name="input_name_error_title5">重新輸入捐贈名稱</string>
    <string name="complete_checkin_title1">今日簽到已完成</string>
    <string name="complete_checkin_title2">請於明日00:00之後</string>
    <string name="complete_checkin_title3">再回來簽到！</string>
    <string name="complete_checkin_title4">點擊返回</string>
    <string name="complete_checkin_title5">繼續完成任務</string>
    <string name="button_goback">返回</string>
    <string name="no_res_title1">1km内沒有環保餐廳喔!</string>
    <string name="no_res_title2">返回地圖\n</string>
    <string name="no_res_title3">尋找環保餐廳吧!</string>
    <string name="dialog_button_title">返回地圖\n</string>
    <string name="instruction">指導</string>
    <string name="top_categoryword">熱門標籤</string>
    <string name="turntable_dialog_title">轉盤結果：</string>
    <string name="turntable_button_title1">確認</string>
    <string name="turntable_button_title2">再一次</string>
    <string name="close_turntable">關掉轉盤</string>
    <string name="category1_title">「中式」</string>
    <string name="category_1">中華饗宴\n經典風味就在眼前!</string>
    <string name="category2_title">「日式」</string>
    <string name="category_2">日本經典,帶你探索\n和風美食的無窮魅力!</string>
    <string name="category3_title">「韓式」</string>
    <string name="category_3">比你的韓劇男神還香!</string>
    <string name="category4_title">「港式」</string>
    <string name="category_4">好肚餓啊,去食茶餐廳啊</string>
    <string name="category5_title">「泰式」</string>
    <string name="category_5">酸辣交融,讓您欲罷不能</string>
    <string name="category6_title">「越式」</string>
    <string name="category_6">越南的味蕾之旅\n酸甜鮮辣每一口都讓你驚豔!</string>
    <string name="category7_title">「南洋」</string>
    <string name="category_7">酸甜苦辣鹹\n樣樣都是頂呱呱!</string>
    <string name="category8_title">「美式」</string>
    <string name="category_8">美式經典\n大份量與滿足感的完美結合!</string>
    <string name="category9_title">「義式」</string>
    <string name="category_9">品味羅馬假期\n享受義式風情</string>
    <string name="category10_title">「特色菜」</string>
    <string name="category_10">特色菜特色菜</string>
    <string name="category11_title">「早午餐」</string>
    <string name="category_11">美好的一天從早午餐開始</string>
    <string name="category12_title">「下午茶」</string>
    <string name="category_12">別再睡午覺了\n來杯熱茶配點心</string>
    <string name="category13_title">「輕食」</string>
    <string name="category_13">輕盈每一餐\n美味與健康的完美平衡</string>
    <string name="category14_title">「甜點」</string>
    <string name="category_14">幸福魔法,讓你一口成癮!</string>
    <string name="category15_title">「冰品」</string>
    <string name="category_15">這不是冰品,是夏日的救贖</string>
    <string name="category16_title">「飲品」</string>
    <string name="category_16">這不是飲料,是快樂水</string>
    <string name="category17_title">「咖啡」</string>
    <string name="category_17">每天來一杯\n活力滿滿一整天</string>
    <string name="category18_title">「茶店」</string>
    <string name="category_18">來杯好茶,把煩惱都泡走</string>
    <string name="category19_title">「便當」</string>
    <string name="category_19">營養均衡,美味隨行</string>
    <string name="category20_title">「健康餐」</string>
    <string name="category_20">低卡高纖健康餐\n健康美麗不打折!</string>
    <string name="category21_title">「壽司」</string>
    <string name="category_21">小小一盤\n讓您筷子忙個不停</string>
    <string name="category22_title">「麵食」</string>
    <string name="category_22">細滑麵條\n讓您每一口都充滿滿足感</string>
    <string name="category23_title">「牛肉麵」</string>
    <string name="category_23">一口牛肉一口麵\n乃人間美味</string>
    <string name="category24_title">「拉麵」</string>
    <string name="category_24">今天您的拉麵魂覺醒了嗎</string>
    <string name="category25_title">「小吃」</string>
    <string name="category_25">小小一口,大大滿足</string>
    <string name="category26_title">「自助餐」</string>
    <string name="category_26">不用客氣,想吃啥夾啥</string>
    <string name="category27_title">「合菜」</string>
    <string name="category_27">合菜一上桌\n連挑食的人都得投降</string>
    <string name="category28_title">「熱炒」</string>
    <string name="category_28">一桌熱炒,兩杯啤酒\n三五好友</string>
    <string name="category29_title">「鐵板燒」</string>
    <string name="category_29">鐵板上的美食表演\n品嚐主廚的獨門絕活</string>
    <string name="category30_title">「火鍋」</string>
    <string name="category_30">啥都能放,放啥都香～</string>
    <string name="category31_title">「牛排」</string>
    <string name="category_31">五分熟的口感\n十分的满足!</string>
    <string name="category32_title">「漢堡」</string>
    <string name="category_32">每一口都是極致享受!</string>
    <string name="category33_title">「烤肉」</string>
    <string name="category_33">這不是饞,是烤肉的召喚</string>
    <string name="category34_title">「咖喱」</string>
    <string name="category_34">香料的交響曲\n舌尖上的異國風情</string>
    <string name="category35_title">「海鮮」</string>
    <string name="category_35">捕捉大海的精華\n享受海鮮的極致美味!</string>
    <string name="category36_title">「素食」</string>
    <string name="category_36">不用肉\n照樣能讓你吃得盡興</string>
    <string name="category37_title">「居酒屋」</string>
    <string name="category_37">這不是酒吧\n是屬於您的深夜食堂</string>
    <string name="category38_title">「餐酒館」</string>
    <string name="category_38">美食與美酒的完美化學反應</string>
</resources>