<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:contentDescription="@string/go_back"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <RelativeLayout
        android:id="@+id/relativeLayout7"
        android:layout_width="353dp"
        android:layout_height="70dp"
        android:layout_marginStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/res_name"
            android:layout_width="343dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="-3dp"
            android:text="@string/restaurantName"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>


        <ImageView
            android:id="@+id/res_logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/cricle_frame"
            android:padding="1dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/res_logo" />


        <ImageButton
            android:id="@+id/like"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="90dp"
            android:background="#00000000"
            android:contentDescription="@string/like"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/like" />

        <ImageButton
            android:id="@+id/unlike"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="90dp"
            android:background="#00000000"
            android:contentDescription="@string/unlike"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/unlike" />


        <ImageButton
            android:id="@+id/checkin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:contentDescription="@string/check_in"
            app:layout_constraintStart_toEndOf="@+id/unlike"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout7"
            app:srcCompat="@drawable/checkin" />

        <TextView
            android:id="@+id/like_num"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginStart="143dp"
            android:layout_marginTop="115dp"
            android:text="@string/like_score"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/like"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/unlike_num"
            android:layout_width="40dp"
            android:layout_height="20dp"

            android:text="@string/unlike_score"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unlike" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tag_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relativeLayout8"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="170dp"
            android:background="@drawable/information_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/res_info"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_color_selector"
                android:contentDescription="@string/jump_information"
                android:text="@string/button_res_information"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/res_menu"
                android:layout_width="175dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/res_info"
                android:background="@drawable/button_color_selector"
                android:contentDescription="@string/jump_menu"
                android:text="@string/button_menu"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


</LinearLayout>